tests/baselines/reference/exportSpecifierReferencingOuterDeclaration2.errors.txt
tests/cases/compiler/exportSpecifierReferencingOuterDeclaration2_B.ts(1,10): error TS2661: Cannot re-export name that is not defined in the module.


==== tests/cases/compiler/exportSpecifierReferencingOuterDeclaration2_A.ts (0 errors) ====
    declare module X { export interface bar { } }
    
==== tests/cases/compiler/exportSpecifierReferencingOuterDeclaration2_B.ts (1 errors) ====
    export { X };
             ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
    export declare function foo(): X.bar;